--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_native_splash: ^2.2.9
   connectivity_plus: ^2.3.9
   share_plus: ^4.5.3
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
